SOLR-18358: fix forbiddenApis violation and add changelog entry
Replace Paths.get with Path.of in BackupRestoreApiErrorConditionsTest;
Solr's forbiddenApis bans java.nio.file.Paths#get.